# career-intelligence

./: .gitignore  README.md  final_results.json  jobs_cleaned_phase3.json  jobs_cleaned_with_skills.json  pyproject.toml  remoteok_cleaned_data.csv  remoteok_loader.duckdb  requirements.txt  search_results_jobs.json  search_results_skills.json  skills.json  skills_alias.json
crawler/: README.md  main.py  test.py  test_singlepage.py
data_cleaning/: clean_jobs_v2.py  data_cleaning_v2.md  remoteok_cleaner.py
db/: db.py  init.py  schema.sql
docs/: architecture.md  development-plan.md  project-plan.md  project_plan.md  team-standards.md
embed_search/: README.md  embed.py  skills_agg.py  test.py  vector_search.py  verify_embeddings.py
fv/: README.md  remoteok_loader.duckdb  remoteok_loader.py  wwr_loader.py
fv/sql/: selects.sql  selects_remoteok.sql
llm/: model.py  readme.md  run.py  test_model.py
loader/: create_views.py  remoteok_loader.duckdb  remoteok_loader.py
loader/sql/: create_views.sql
ui/: CLAUDE.md  README.md  __init__.py  data_models.py
ui/components/: __init__.py  ai_summary_placeholder.py  job_card.py  search_bar.py  skill_chip.py
ui/pages/: about_page.py  jobs_page.py
