[project]
name = "career-intelligence"
version = "0.1.0"
description = "assuming 3.14 is too cutting edge"
readme = "README.md"
requires-python = ">=3.13.11,<3.14"
dependencies = [
    "beautifulsoup4==4.14.3",
    "dlt>=1.21.0",
    "duckdb>=1.4.3",
    "feedparser>=6.0.12",
    "playwright>=1.57.0",
    "rio-ui>=0.12",
    "yake==0.7.1",
]
